[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alnp"
version = "1.0.6"
description = "Python helpers for the Authenticated Lighting Network Protocol."
authors = [{ name = "ALNP Maintainers" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/your-org/alnp"
Repository = "https://github.com/your-org/alnp"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
