[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alnp"
version = "2.0.18"
description = "Python helpers for the Authenticated Lighting Network Protocol."
authors = [{ name = "ALNP Maintainers" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/alpine-core/Authenticated-Lighting-Protocol"
Repository = "https://github.com/alpine-core/Authenticated-Lighting-Protocol"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
