[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpine-sdk"
version = "0.1.7"
description = "High-level ALPINE Python SDK depending on the protocol layer."
authors = [{ name = "alpine-core" }]
dependencies = [
  "alnp >=2.0.18",
  "cbor2 >=5"
]
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
