[package]
name = "alpine-protocol-sdk"
version = "0.1.6"
edition = "2021"
description = "High-level SDK on top of the ALPINE protocol layer."
authors = ["alpine-core"]
license = "Apache-2.0"

alpine-protocol-rs = "2.0.17"
rand = "0.8"
serde_cbor = "0.11"
serde_json = "1.0"
tokio = { version = "1.48", features = ["net", "rt", "rt-multi-thread", "time", "macros"] }
uuid = { version = "1.18", features = ["v4"] }
