[package]
name = "alpine-protocol-sdk"
version = "0.1.7"
edition = "2021"
description = "High-level SDK on top of the ALPINE protocol layer."
authors = ["alpine-core"]
license = "Apache-2.0"

[dependencies]
alpine-protocol-rs = "2.0.18"
rand = "0.8"
serde_cbor = "0.11"
serde_json = "1.0"
tokio = { version = "1.48", features = ["net", "rt", "rt-multi-thread", "time", "macros"] }
uuid = { version = "1.18", features = ["v4"] }
